--- a/index.html
+++ b/index.html
@@ -1,1 +1,172 @@
-Hello World
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="index.js"></script>
+    <!meta charset="UTF-8">
+    <title>Rubik's Cube</title>
+</head>
+
+
+<body>
+
+<h1>How to Solve a Rubik's Cube</h1>
+<h2>Ryan Kilpadi</h2>
+<!--
+<table>
+    <tr>
+        <td>
+            Intro Filler Text
+        </td>
+        <td>
+            <Image src="resources/shuffledCube.png" class="intro-image" class="medSize"></Image>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Step 1 Filler Text
+        </td>
+        <td>
+            <Image src="resources/stepOneCube.png" class="medSize"></Image>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Step 2 Filler Text
+        </td>
+        <td>
+            <Image src="resources/stepTwoCube.png" class="medSize"></Image>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Step 3 Filler Text
+        </td>
+        <td>
+            <Image src="resources/stepThreeCube.png" class="medSize"></Image>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Step 4 Filler Text
+        </td>
+        <td>
+            <Image src="resources/stepFourCube.png" class="medSize"></Image>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Step 5 Filler Text
+        </td>
+        <td>
+            <Image src="resources/stepFiveCube.png" class="medSize"></Image>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Step 6 Filler Text
+        </td>
+        <td>
+            <Image src="resources/stepSixCube.png" class="medSize"></Image>
+        </td>
+    </tr>
+-->
+
+<table>
+    <tr>
+        <td>
+            <div class="left">
+                Intro Filler Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </td>
+        <td>
+            <div class="right">
+                <Image src="resources/shuffledCube.png" class="intro-image" style="height: 230px"></Image>
+            </div>
+        </td>
+    </tr>
+
+    <!--<div class="title">Step One: White Cross</div>-->
+    <tr>
+        <td>
+            <div class="left">
+                Step 1 Filler Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </td>
+        <td>
+            <div class="right">
+                <Image src="resources/stepOneCube.png" style="height: 230px"></Image>
+            </div>
+        </td>
+    </tr>
+
+    <!--<div class="title">Step One: White Cross</div>-->
+    <tr>
+        <td>
+            <div class="left">
+                Step 2 Filler Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </td>
+        <td>
+            <div class="right">
+                <Image src="resources/stepTwoCube.png" style="height: 230px"></Image>
+            </div>
+        </td>
+    </tr>
+
+    <!--<div class="title">Step One: White Cross</div>-->
+    <tr>
+        <td>
+            <div class="left">
+                Step 3 Filler Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </td>
+        <td>
+            <div class="right">
+                <Image src="resources/stepThreeCube.png" style="height: 230px"></Image>
+            </div>
+        </td>
+    </tr>
+
+    <!--<div class="title">Step One: White Cross</div>-->
+    <tr>
+        <td>
+            <div class="left">
+                Step 4 Filler Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </td>
+        <td>
+            <div class="right">
+                <Image src="resources/stepFourCube.png" style="height: 230px"></Image>
+            </div>
+        </td>
+    </tr>
+
+    <!--<div class="title">Step One: White Cross</div>-->
+    <tr>
+        <td>
+            <div class="left">
+                Step 5 Filler Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </td>
+        <td>
+            <div class="right">
+                <Image src="resources/stepFiveCube.png" style="height: 230px"></Image>
+            </div>
+        </td>
+    </tr>
+
+    <!--<div class="title">Step One: White Cross</div>-->
+    <tr>
+        <td>
+            <div class="left">
+                Step 6 Filler Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </td>
+        <td>
+            <div class="right">
+                <Image src="resources/stepSixCube.png" style="height: 230px"></Image>
+            </div>
+        </td>
+    </tr>
+</table>
+
+</body>
